--- a/.github/workflows/gotestsum.yaml
+++ b/.github/workflows/gotestsum.yaml
@@ -13,7 +13,7 @@ jobs:
         with:
           go-version: '1.20'
       - name: run gotestsum
-        runs: |
+        run: |
           cd ./gotestsum
           go run gotest.tools/gotestsum@latest --junitfile unit-test.xml
       - name: Publish Test Results
