--- a/.github/workflows/gotestsum.yaml
+++ b/.github/workflows/gotestsum.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: run gotestsum
         run: |
           cd ./gotestsum
-          go test -json 2>&1 | go run github.com/jstemmer/go-junit-report/v2@latest -parser gojson > unit-test.xml
+          go test -json ./... 2>&1 | go run github.com/jstemmer/go-junit-report/v2@latest -parser gojson > unit-test.xml
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2.7.0
         if: always()
